Rewrite & simplify demoapp

--- a/demoapp/conf/dev/nginx/demoapp.conf
+++ b/demoapp/conf/dev/nginx/demoapp.conf
@@ -1,6 +1,6 @@
-upstream demoapp-server {
-    server unix:/home/user/run/www/demoapp-webapi-0.sock;
-    server unix:/home/user/run/www/demoapp-webapi-1.sock;
+upstream demoapp-webapi {
+    server unix:/tmp/www/demoapp-webapi-0.sock;
+    server unix:/tmp/www/demoapp-webapi-1.sock;
 }
 
 server {
@@ -10,10 +10,7 @@ server {
     access_log /var/log/nginx/demoapp.access.log;
     error_log /var/log/nginx/demoapp.error.log;
 
-    location /demoapp/api {
+    location /demoapp {
         proxy_pass http://demoapp-webapi;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
