--- a/demoapp/conf/prod/nginx/demoapp.conf
+++ b/demoapp/conf/prod/nginx/demoapp.conf
@@ -1,4 +1,4 @@
-upstream demoapp-server {
+upstream demoapp-webapi {
     server unix:/home/user/run/www/demoapp-webapi-0.sock;
     server unix:/home/user/run/www/demoapp-webapi-1.sock;
     server unix:/home/user/run/www/demoapp-webapi-2.sock;
